--- a/package.json
+++ b/package.json
@@ -5,5 +5,12 @@
   "main": "src/born.js",
   "dependencies": {
     "buffer-write": "0.0.2"
+  },
+  "devDependencies": {
+    "istanbul": "^0.4.1",
+    "mocha": "^2.3.4"
+  },
+  "scripts": {
+    "test": "node_modules/mocha/bin/mocha test/*.spec.js"
   }
 }
